--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "chrono-node": "^1.3.5",
+    "csv-writer": "^1.2.0",
     "moment": "^2.23.0",
     "pg": "^7.7.1",
     "puppeteer": "^1.11.0",
-    "squel": "^5.12.2"
+    "squel": "^5.12.2",
+    "unfluff": "^3.2.0"
   }
 }
