--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "chrono-node": "^1.3.5",
     "csv-writer": "^1.2.0",
+    "lodash": "^4.17.11",
+    "matrix-js-sdk": "^1.0.2-rc.1",
     "moment": "^2.23.0",
     "pg": "^7.7.1",
     "puppeteer": "^1.11.0",
