--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "chrono-node": "^1.3.5",
     "csv-writer": "^1.2.0",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
+    "mariadb": "^2.1.0",
     "matrix-js-sdk": "^1.0.2-rc.1",
     "moment": "^2.23.0",
     "pg": "^7.7.1",
-    "puppeteer": "^1.11.0",
-    "squel": "^5.12.2",
+    "puppeteer": "^1.18.1",
+    "squel": "^5.13.0",
     "unfluff": "^3.2.0"
   }
 }
